# django-data-mining

./: pyproject.toml
app/: views.py
core/: settings.py  urls.py
